<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="TFGestioneFTC_Misura_IN" Id="{79d0f8b2-9f6e-4bfc-8ec6-25fb27c1c01f}">
    <Declaration><![CDATA[TYPE TFGestioneFTC_Misura_IN :
STRUCT
	FTC_ZoccoloBasso 	: BOOL;
	FTC_Pallettone   	: BOOL;
	FTC_CavallinaBassa 	: BOOL;
	FTC_CavallinaAlta 	: BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>